public interface ITransportable {

    double getWidth();
    void setWidth(double w);

    double getHeight();
    void setHeight(double h);

    double getLength();
    void setLength(double l);

    double getX();
    void setX(double x);

    double getY();
    void setY(double y);

}
