package Interfaces;

/**
 * @author SM
 * Interface for objects that have a position
 */
public interface IPositionable {
    double getX();
    void setX(double x);
    double getY();
    void setY(double y);
}
