package Interfaces;

/**
 * @author SM
 * Interface for objects that are sizeable
 */
public interface ISizeable {
    double getWidth();
    void setWidth(double w);

    double getHeight();
    void setHeight(double h);

    double getLength();
    void setLength(double l);
}
